--- a/website/templates/main.html
+++ b/website/templates/main.html
@@ -1,10 +1,39 @@
-{% extends "base.html" %}
+{% block navbar_css %}
+    <!-- Aquí puedes incluir el CSS específico para la navbar si es necesario -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+{% endblock %}
 
-{% block title %} G-MOV Guardián del movimiento {% endblock %}
+{% block navbar %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbar"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbar">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" id="main" href="/main">Main</a>
+      {% if user.is_authenticated %}
+      <a class="nav-item nav-link" id="home" href="/">Home</a>
+      <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+      {% else %}
+      <a class="nav-item nav-link" id="login" href="/login">Login</a>
+      <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+      {% endif %}
+    </div>
+  </div>
+</nav>
+{% endblock %}
+
 
 {% block content %}
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G-MOV Guardián del movimiento</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
@@ -12,12 +41,12 @@
 
 <body>
     <header>
-        <h1>Bienvenido a Nuestro Solución IoT</h1>
+        <h1>Bienvenido a Nuestro Solución IoT: G_MOV Guardián del Movimiento</h1>
     </header>
 
     <!-- Logo Section -->
     <div class="logo-container">
-        <img src="https://www.dafont.com/forum/attach/orig/6/8/680781.jpg" alt="Logo" class="logo">
+        <img src="https://portalcontentprod.blob.core.windows.net/portalcontentprod/images/1000-x-365-11.original.png" alt="Logo" class="logo">
     </div>
 
     <!-- Banner Section -->
@@ -28,8 +57,15 @@
     <!-- Information Section -->
     <main>
         <section class="info-section">
-            <h2>Información del Proyecto</h2>
-            <p>Aquí puedes incluir detalles sobre tu proyecto, su propósito y características.</p>
+            <h2>Información de la Solución</h2>
+            <p> G-Mov es una solución innovadora diseñada para impulsar la robótica en beneficio de la sociedad. 
+                Dirigida a roboticistas y aficionados que ya cuentan con sistemas robóticos móviles compatibles con
+                ROS2, como Turtlebot3, iCreate3 o Andino, esta solución permite agregar un módulo de detección de 
+                caídas a sus robots. Este módulo incluye un servo motor, una cámara Pi y un acelerómetro para monitorear
+                y detectar caídas de personas mayores. Además, ofrece visualización remota y notificaciones en tiempo
+                real, aprovechando las capacidades de navegación de los robots para seguir y guiar a la persona,
+                brindando seguridad y tranquilidad en hogares de un solo piso.</p>
+                
             <p>Si estás interesado en unirte o acceder a más funcionalidades, por favor inicia sesión.</p>
 
             <h2>Métodos de acceso:</h2>
@@ -37,7 +73,6 @@
                 <a href="{{ url_for('auth.login') }}" class="button"> Iniciar Sesión </a>
                 <a href="{{ url_for('auth.sign_up') }}" class="button"> Registrarse </a>
             </div>
-
         </section>
     </main>
 
@@ -46,4 +81,3 @@
     </footer>
 </body>
 {% endblock %}
-
