--- a/website/static/login.css
+++ b/website/static/login.css
@@ -1,11 +1,14 @@
 .background-image {
     background-image: url('https://www.mediasource.mx/hs-fs/hubfs/blog-files/fondos-web.jpg?width=950&name=fondos-web.jpg');
+    position: absolute; /* Permite que el logo esté en la parte posterior */
+    top: 0;
+    left: 0; /* Alinea a la izquierda */
+    width: 100%; /* Ancho completo */
+    height: auto; /* Altura completa */
+    z-index: 1; /* Asegura que esté detrás de otros elementos */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    position: relative;
-    width: 100%;
-    height: 100vh;
   }
   
   .login-box {
@@ -27,4 +30,21 @@
     align-items: center;
     min-height: 100vh;
   }
+
+  /* Estilo para el contenedor de los flash messages */
+.flash-container {
+  position: fixed;
+  top: 55px; /* Ajusta el valor según la altura de tu navbar */
+  width: 100%;
+  z-index: 1050; /* Asegura que los mensajes estén por encima de otros elementos */
+  display: flex;
+  justify-content: center;
+  pointer-events: none; /* Permite que los mensajes no interfieran con otros elementos */
+}
+
+.flash-container .alert {
+  max-width: 600px;
+  pointer-events: auto; /* Reactiva los eventos de puntero solo para los mensajes */
+}
+
   
